updated Forming Magic Square solution with classes